# Second-Brain

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/secondbrain/: __init__.py  config.py  constants.py  diagnostics.py  logging_config.py  models.py  runtime_cache.py  telemetry.py
src/secondbrain/api/: main.py
src/secondbrain/chat/: session.py
src/secondbrain/chunking/: splitter.py  tokenizer.py
src/secondbrain/cli/: main.py
src/secondbrain/embeddings/: base.py  factory.py  ollama_embedder.py  openai_embedder.py  query_cache.py  sentence_transformers_embedder.py
src/secondbrain/ingestion/: embedding_pipeline.py  hashing.py  indexer.py  manifest.py  markdown_parser.py  persistence_service.py  scan_service.py  types.py  vault_scanner.py  watch.py
src/secondbrain/llm/: base.py  factory.py  ollama_chat.py  openai_compat.py
src/secondbrain/rag/: pipeline.py  prompts.py
src/secondbrain/retrieval/: bm25.py  lexical_base.py  mmr.py  reranker.py  retriever.py
src/secondbrain/vectorstore/: chroma_store.py  factory.py  lance_or_chroma_impl.py  store.py
tests/: conftest.py  helpers.py  test_api_pretty.py  test_auto_index.py  test_chat_clients.py  test_chroma_store.py  test_chunking.py  test_cli_ask.py  test_cli_index.py  test_cli_search_json.py  test_hashing.py  test_improvements.py  test_indexer_lifecycle.py  test_markdown_parser.py  test_ollama_embedders.py  test_rag_pipeline.py  test_retrieval_filters.py  test_retrieval_integration.py
