# Metadados do pacote, build e ferramentas.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain"
version = "0.1.0"
description = "Second brain over Obsidian vault: semantic search and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.0",
    "pathspec>=0.12.0",
    "rich>=13.7.0",
    "rank-bm25>=0.2.2",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
embeddings-st = [
    "sentence-transformers>=3.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
tokenizer = [
    "tiktoken>=0.7.0",
]

[project.scripts]
secondbrain = "secondbrain.cli.main:app_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=secondbrain --cov-report=term-missing"

[tool.coverage.run]
source = ["src/secondbrain"]
omit = ["*/tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLW"]
ignore = ["PLW0603", "B008", "B018", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/secondbrain/cli/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["secondbrain"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "secondbrain.llm.*",
    "secondbrain.rag.pipeline",
    "secondbrain.cli.main",
    "secondbrain.vectorstore.chroma_store",
    "secondbrain.retrieval.reranker",
]
disable_error_code = ["override", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = ["secondbrain.logging_config"]
disable_error_code = ["list-item"]
